--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -40,6 +40,8 @@
   $h32:$height/32 !global;
   $h34:$height/34 !global;
   $h36:$height/36 !global;
+  $h72:$height/72 !global;
+  $h144:$height/144 !global;
 
   $w2:$width/2 !global;
   $w3:$width/3 !global;
