--- a/app/styles/_helpers/lines.scss
+++ b/app/styles/_helpers/lines.scss
@@ -1,19 +1,4 @@
-// Two lines of equal height
-// @args top: Color of top line
-// @args bottom: Color of bottom line
-@mixin two-lines($top, $bottom) {
-  @include lines($top, $h2, $bottom, $h2);
-}
-
-// Three lines of equal height
-// @args top: Color of top line
-// @args center: Color of center line
-// @args bottom: Color of bottom line
-@mixin three-lines($top, $center, $bottom) {
-  @include lines($top, $h3, $center, $h3, $bottom, $h3);
-}
-
-// Create several lines of various height and colors
+// Create several lines of various height
 // @args[0]: Color of the first line
 // @args[1]: Height of the first line
 // @args[2]: Color of the second line
@@ -21,21 +6,45 @@
 // ...
 // @args[(n-1)*2]: Color of the nth line
 // @args[(n-1)*2 + 1]: Width of the nth line
-@mixin lines($args...) {
+@function lines($args...) {
   // Default values
-  $_offset:0;
-  $_color:transparent;
-  $_result: ();
+  $offset:0;
+  $color:transparent;
+  $result: ();
 
-  @for $_i from 1 to length($args) + 1 {
+  @for $i from 1 to length($args) + 1 {
     // Only interested in even numbers
-    @if ($_i % 2 == 0) {
-      $_color: nth($args, $_i - 1);
-      $_height: nth($args, $_i);
-      $_result: append($_result, h-stripe($_color, $_height, $_offset), comma);
-      $_offset: $_offset + $_height;
+    @if ($i % 2 == 0) {
+      $color: nth($args, $i - 1);
+      $height: nth($args, $i);
+      $result: append($result, h-stripe($color, $height, $offset), comma);
+      $offset: $offset + $height;
     }
   }
-  background-image: $_result;
+  @return $result;
+}
+@mixin lines($args...) {
+  background-image: lines($args...);
 }
 
+
+// Two lines of equal height
+// @args top: Color of top line
+// @args bottom: Color of bottom line
+@function two-lines($top, $bottom) {
+  @return lines($top, $h2, $bottom, $h2);
+}
+@mixin two-lines($top, $bottom) {
+  background-image: two-lines($top, $bottom);
+}
+
+// Three lines of equal height
+// @args top: Color of top line
+// @args center: Color of center line
+// @args bottom: Color of bottom line
+@function three-lines($top, $center, $bottom) {
+  @return lines($top, $h3, $center, $h3, $bottom, $h3);
+}
+@mixin three-lines($top, $center, $bottom) {
+  background-image: three-lines($top, $center, $bottom);
+}
