--- a/app/styles/_helpers/variables.scss
+++ b/app/styles/_helpers/variables.scss
@@ -5,6 +5,7 @@ $height: round($width * 2 / 3);
 
 // Special UTF-8
 $UTF8_BLACK_STAR: '\2605';
+$UTF8_COUNTRY_AFG: '\e602';
 $UTF8_COUNTRY_AGO: '\e601';
 $UTF8_COUNTRY_ALB: '\e600';
 $UTF8_MAPLE_LEAF: '\1F341';
