Adding Angola (need a bit of rework, still)

--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -41,6 +41,7 @@
   $h34:$height/34 !global;
   $h36:$height/36 !global;
   $h72:$height/72 !global;
+  $h100:$height/100 !global;
   $h144:$height/144 !global;
 
   $w2:$width/2 !global;
