--- a/app/styles/_flags/ago.scss
+++ b/app/styles/_flags/ago.scss
@@ -2,4 +2,15 @@
 // http://www.crwflags.com/fotw/flags/ao.html
 @mixin flag-ago() {
   @include ratio(2 / 3);
+  $unit: $h100;
+  $top: #CE1126;
+  $bottom: #000;
+  $symbol: $UTF8_COUNTRY_AGO;
+  $symbol-color: #F9D616;
+  $symbol-size: 54 * $unit;
+
+  @include two-lines($top, $bottom);
+  &:before {
+    @include centered-symbol($symbol, $symbol-color, $symbol-size);
+  }
 };
