--- a/app/styles/_helpers/symbols.scss
+++ b/app/styles/_helpers/symbols.scss
@@ -11,6 +11,7 @@
   font-size: $size;
   height: $size;
   line-height: $size;
+  text-align: center;
   position:absolute;
   width: $size;
   top: $top - $size / 2;
