--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -43,6 +43,7 @@
   $h72:$height/72 !global;
   $h100:$height/100 !global;
   $h144:$height/144 !global;
+  $h2880:$height/2880 !global;
 
   $w2:$width/2 !global;
   $w3:$width/3 !global;
