--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -42,6 +42,7 @@
   $h36:$height/36 !global;
   $h72:$height/72 !global;
   $h100:$height/100 !global;
+  $h120:$height/120 !global;
   $h144:$height/144 !global;
   $h2880:$height/2880 !global;
 
