--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -41,6 +41,7 @@
   $h34:$height/34 !global;
   $h36:$height/36 !global;
   $h72:$height/72 !global;
+  $h80:$height/80 !global;
   $h100:$height/100 !global;
   $h120:$height/120 !global;
   $h144:$height/144 !global;
