--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -45,6 +45,7 @@
   $h100:$height/100 !global;
   $h120:$height/120 !global;
   $h144:$height/144 !global;
+  $h720:$height/720 !global;
   $h2880:$height/2880 !global;
 
   $w2:$width/2 !global;
