--- a/app/styles/_flags/lby.scss
+++ b/app/styles/_flags/lby.scss
@@ -1,5 +1,38 @@
 // Libya
 // http://www.crwflags.com/fotw/flags/ly.html
+// https://en.wikipedia.org/wiki/Flag_of_Libya
+// http://www.vexilla-mundi.com/libya_flag.html
 @mixin flag-lby() {
-  @include ratio(2 / 3);
+  @include ratio(1 / 2);
+  $unit: $h4;
+  $top-color: #239E46;
+  $top-size: $unit;
+  $center-color: #000;
+  $center-size: 2 * $unit;
+  $bottom-color: #EF0012;
+  $bottom-size: $unit;
+  $symbol-color: #FFF;
+  $crescent-front-color: $center-color;
+  $crescent-front-size: 5 / 6 * $unit;
+  $crescent-front-left: $w2 + ($unit / 6);
+  $crescent-front-top: $h2;
+  $crescent-back-color: $symbol-color;
+  $crescent-back-size: $unit;
+  $crescent-back-left: $w2;
+  $crescent-back-top: $h2;
+
+  // Note: Size and position of star is completly manual, I did not do the math
+  $star-color: $symbol-color;
+  $star-size: 3 * $unit / 4;
+  $star-left: $w2 + $unit / 2 + $star-size / 4;
+  $star-top: $h2;
+
+  background-image:
+                    circle($crescent-front-color, $crescent-front-size, $crescent-front-left, $crescent-front-top),
+                    circle($crescent-back-color, $crescent-back-size, $crescent-back-left, $crescent-back-top),
+                    lines($top-color, $top-size, $center-color, $center-size, $bottom-color, $bottom-size);
+  &:after {
+    @include star($star-color, $star-size, $star-left, $star-top);
+    transform: rotate(-20deg);
+  }
 };
