--- a/app/styles/_flags/mdv.scss
+++ b/app/styles/_flags/mdv.scss
@@ -1,5 +1,30 @@
 // Maldives
 // http://www.crwflags.com/fotw/flags/mv.html
+// https://en.wikipedia.org/wiki/Flag_of_the_Maldives
+// http://www.vexilla-mundi.com/maldives_flag.html
 @mixin flag-mdv() {
   @include ratio(2 / 3);
+  $unit: $h48;
+  $border-color: rgb(210, 16, 52);
+  $border-size: 12 * $unit;
+  $center-color: rgb(0, 126, 58);
+  $crescent-front-color: $center-color;
+  $crescent-front-size: 16 * $unit;
+  $crescent-front-left: 42 * $unit;
+  $crescent-front-top: 24 * $unit;
+  $crescent-back-color: #FFF;
+  $crescent-back-size: 16 * $unit;
+  $crescent-back-left: 39 * $unit;
+  $crescent-back-top: 24 * $unit;
+
+  background-color: $center-color;
+  background-image:
+                    // Crescent
+                    circle($crescent-front-color, $crescent-front-size, $crescent-front-left, $crescent-front-top),
+                    circle($crescent-back-color, $crescent-back-size, $crescent-back-left, $crescent-back-top),
+                    // Borders
+                    h-stripe($border-color, $border-size, 0),
+                    h-stripe($border-color, $border-size, 36 * $unit),
+                    v-stripe($border-color, $border-size, 0),
+                    v-stripe($border-color, $border-size, 60 * $unit);
 };
