--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -40,6 +40,7 @@
   $h32:$height/32 !global;
   $h34:$height/34 !global;
   $h36:$height/36 !global;
+  $h48:$height/48 !global;
   $h72:$height/72 !global;
   $h80:$height/80 !global;
   $h100:$height/100 !global;
