--- a/app/styles/_flags/alb.scss
+++ b/app/styles/_flags/alb.scss
@@ -1,5 +1,22 @@
 // Albania
 // http://www.crwflags.com/fotw/flags/al.html
+// http://www.vexilla-mundi.com/albania_flag.html
 @mixin flag-alb() {
-  @include ratio(2 / 3);
+  @include ratio(5 / 7);
+  $unit: $h30;
+  $bg: #da291c;
+  $symbol: $UTF8_COUNTRY_ALB;
+  $symbol-color: #000;
+  $symbol-height: 20 * $unit;
+  $symbol-width: 18 * $unit;
+  $symbol-left: 21 * $unit;
+  $symbol-top: 15 * $unit;
+
+  background-color: $bg;
+  &:before {
+    @include symbol($symbol, $symbol-color, $symbol-height, $symbol-left, $symbol-top);
+    width: $symbol-width;
+
+  }
+
 };
