--- a/app/styles/_flags/com.scss
+++ b/app/styles/_flags/com.scss
@@ -1,5 +1,65 @@
 // Comoros
 // http://www.crwflags.com/fotw/flags/km.html
+// https://en.wikipedia.org/wiki/Flag_of_the_Comoros
 @mixin flag-com() {
-  @include ratio(2 / 3);
+  @include ratio(3 / 5);
+  $unit: $h120;
+  $yellow: #FFC61E;
+  $white: #FFF;
+  $red: #CE1126;
+  $blue: #3A75C4;
+  $line-height: 30 * $unit;
+  $green: #3D8E33;
+  $triangle-width: 100 * $unit;
+  $crescent-front-color: $green;
+  $crescent-front-size: 54 * $unit;
+  $crescent-front-left: 46 * $unit;
+  $crescent-front-top: 60 * $unit;
+  $crescent-back-color: $white;
+  $crescent-back-size: 54 * $unit;
+  $crescent-back-left: 34 * $unit;
+  $crescent-back-top: 60 * $unit;
+  $star-symbol: $UTF8_BLACK_STAR;
+  $star-color: $white;
+  $star-size: 8 * $unit;
+  $star-left: 36 * $unit;
+  $star-top: 36 * $unit;
+  $star-spacing: 12 * $unit;
+
+  @include lines(
+                  $yellow,
+                  $line-height,
+                  $white,
+                  $line-height,
+                  $red,
+                  $line-height,
+                  $blue,
+                  $line-height
+                );
+  // Triangle
+  &:before {
+    @include triangle($green, $triangle-width);
+  }
+  // Star and crescent
+  &:after {
+    display: block;
+    height: $height;
+    position: absolute;
+    width: $triangle-width;
+    // Stars
+    color: $star-color;
+    content: $star-symbol;
+    font-family: Symbols;
+    font-size: $star-size;
+    padding-left: $star-left;
+    padding-top: $star-top;
+    text-shadow: 
+                0px $star-spacing 0px $star-color,
+                0px (2 * $star-spacing) 0px $star-color,
+                0px (3 * $star-spacing) 0px $star-color;
+    // Crescent
+    background-image: 
+                  circle($crescent-front-color, $crescent-front-size, $crescent-front-left, $crescent-front-top),
+                  circle($crescent-back-color, $crescent-back-size, $crescent-back-left, $crescent-back-top);
+  }
 };
