--- a/app/styles/_flags/jor.scss
+++ b/app/styles/_flags/jor.scss
@@ -1,5 +1,28 @@
 // Jordan
 // http://www.crwflags.com/fotw/flags/jo.html
+// http://www.vexilla-mundi.com/jordan_flag.html
+// http://www.crwflags.com/fotw/flags/jo'.html
 @mixin flag-jor() {
-  @include ratio(2 / 3);
+  @include ratio(1 / 2);
+  $unit: $h32;
+  $top: #000;
+  $center: #FFF;
+  $bottom: #007a33;
+  $triangle: #c8102e;
+  $triangle-width: (sqrt($height * $height + $width * $width) / 2 ) * 1px;
+  $star-symbol: $UTF8_HEAVY_EIGHT_POINTED_RECTILINEAR_BLACK_STAR;
+  $star-color: $center;
+  $star-size: 6 * $unit;
+  // Note: I'm not sure of the calculation here. I'm not sure of the top angle
+  // radius
+  $star-left: tan(90/4) * $h2;
+  $star-top: $h2;
+
+  @include three-lines($top, $center, $bottom);
+  &:before {
+    @include triangle($triangle, $triangle-width);
+  }
+  &:after {
+    @include symbol($star-symbol, $star-color, $star-size, $star-left, $star-top);
+  }
 };
