--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -30,6 +30,7 @@
   $h10:$height/10 !global;
   $h11:$height/11 !global;
   $h12:$height/12 !global;
+  $h14:$height/14 !global;
   $h16:$height/16 !global;
   $h18:$height/18 !global;
   $h20:$height/20 !global;
@@ -41,6 +42,7 @@
   $h34:$height/34 !global;
   $h36:$height/36 !global;
   $h48:$height/48 !global;
+  $h60:$height/60 !global;
   $h72:$height/72 !global;
   $h80:$height/80 !global;
   $h100:$height/100 !global;
