--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -46,6 +46,7 @@
   $h72:$height/72 !global;
   $h80:$height/80 !global;
   $h100:$height/100 !global;
+  $h110:$height/110 !global;
   $h120:$height/120 !global;
   $h144:$height/144 !global;
   $h720:$height/720 !global;
