--- a/app/styles/_flags/chl.scss
+++ b/app/styles/_flags/chl.scss
@@ -1,5 +1,28 @@
 // Chile
 // http://www.crwflags.com/fotw/flags/cl.html
+// http://www.vexilla-mundi.com/chile_flag.html
 @mixin flag-chl() {
   @include ratio(2 / 3);
+  $unit: $h8;
+  $white: #FFF;
+  $red: #c8102e;
+  $blue: #003087;
+  $stripe-height: $h2;
+  $square-size: 4 * $unit;
+  $star-size: 2 * $unit;
+  $star-top: 2 * $unit;
+  $star-left: 2 * $unit;
+
+
+  background-image: 
+                    // Red strip
+                    h-stripe($red,   $stripe-height, $stripe-height),
+                    // Blue stripe
+                    v-stripe($blue,  $square-size),
+                    // White stripe
+                    h-stripe($white, $stripe-height),
+                  ;
+  &:before {
+    @include star($white, $star-size, $star-left, $star-top);
+  }
 };
