Adding part of Malaysia (missing correct UTF8 symbol)

--- a/app/styles/_flags/mys.scss
+++ b/app/styles/_flags/mys.scss
@@ -1,5 +1,50 @@
 // Malaysia
 // http://www.crwflags.com/fotw/flags/my.html
+// http://www.vexilla-mundi.com/malaysia_flag.html
 @mixin flag-mys() {
-  @include ratio(2 / 3);
+  @include ratio(1 / 2);
+  $unit: $h224;
+  $white: #FFF;
+  $red: #e03c31;
+  $blue: #041e42;
+  $yellow: #ffd100;
+  $stripe-height: 16 * $unit;
+  $canton-width: 224 * $unit;
+  $crescent-front-size: 84 * $unit;
+  $crescent-front-left: 102 * $unit;
+  $crescent-front-top: 64 * $unit;
+  $crescent-back-size: 96 * $unit;
+  $crescent-back-left: 92 * $unit;
+  $crescent-back-top: 64 * $unit;
+  $star-symbol: $UTF8_PENTAGRAM;
+  $star-size: 80 * $unit;
+  $star-left: 140 * $unit;
+  $star-top: 64 * $unit;
+
+  background-image: 
+                    // Red and white stripes on the bottom
+                    h-stripe($red,   $stripe-height, 8 * $stripe-height),
+                    h-stripe($white, $stripe-height, 9 * $stripe-height),
+                    h-stripe($red,   $stripe-height, 10 * $stripe-height),
+                    h-stripe($white, $stripe-height, 11 * $stripe-height),
+                    h-stripe($red,   $stripe-height, 12 * $stripe-height),
+                    h-stripe($white, $stripe-height, 13 * $stripe-height),
+                    // Crescent
+                    circle($blue, $crescent-front-size, $crescent-front-left, $crescent-front-top),
+                    circle($yellow, $crescent-back-size, $crescent-back-left, $crescent-back-top),
+                    // Blue stripe
+                    v-stripe($blue,  $canton-width),
+                    // // Red and white stripes on the left
+                    h-stripe($red,   $stripe-height),
+                    h-stripe($white, $stripe-height, 1 * $stripe-height),
+                    h-stripe($red,   $stripe-height, 2 * $stripe-height),
+                    h-stripe($white, $stripe-height, 3 * $stripe-height),
+                    h-stripe($red,   $stripe-height, 4 * $stripe-height),
+                    h-stripe($white, $stripe-height, 5 * $stripe-height),
+                    h-stripe($red,   $stripe-height, 6 * $stripe-height),
+                    h-stripe($white, $stripe-height, 7 * $stripe-height)
+                  ;
+  &:before {
+    @include symbol($star-symbol, $yellow, $star-size, $star-left, $star-top);
+  }
 };
