--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -49,6 +49,7 @@
   $h110:$height/110 !global;
   $h120:$height/120 !global;
   $h144:$height/144 !global;
+  $h224:$height/224 !global;
   $h720:$height/720 !global;
   $h2880:$height/2880 !global;
 
