--- a/app/styles/_helpers/symbols.scss
+++ b/app/styles/_helpers/symbols.scss
@@ -1,3 +1,12 @@
+$UTF8_BLACK_STAR: '\2605';
+$UTF8_COUNTRY_AFG: '\e602';
+$UTF8_COUNTRY_AGO: '\e601';
+$UTF8_COUNTRY_ALB: '\e600';
+$UTF8_HEAVY_EIGHT_POINTED_RECTILINEAR_BLACK_STAR: '\2738';
+$UTF8_MAPLE_LEAF: '\1F341';
+$UTF8_PENTAGRAM: '\26e4';
+$UTF8_STAR_OF_DAVID: '\2721';
+
 // Symbol
 // @args symbol: UTF-8 char to center
 // @args color: Color of the symbol
