--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -45,6 +45,7 @@
   $h60:$height/60 !global;
   $h72:$height/72 !global;
   $h80:$height/80 !global;
+  $h96:$height/96 !global;
   $h100:$height/100 !global;
   $h110:$height/110 !global;
   $h120:$height/120 !global;
