--- a/app/styles/_helpers/symbols.scss
+++ b/app/styles/_helpers/symbols.scss
@@ -1,4 +1,5 @@
 $UTF8_BLACK_STAR: '\2605';
+$UTF8_COUNTRY_ATG: '\e604';
 $UTF8_COUNTRY_MYS: '\e603';
 $UTF8_COUNTRY_AFG: '\e602';
 $UTF8_COUNTRY_AGO: '\e601';
